# pingme

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  notifier.py  scheduler.py
app/bot/: handlers.py  keyboards.py
app/services/: goal_service.py  habit_service.py  llm_service.py  reminder_service.py  shame_service.py
