[project]
name = "reminder-app"
version = "0.1.0"
description = "Self-hosted reminder app and habit tracker with Telegram and WhatsApp notifications"
readme = "README.md"
authors = [
    { name = "Gor", email = "gket96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=22.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "apscheduler>=3.10,<4",
    "apprise>=1.9",
    "pydantic-settings>=2.0",
    "httpx>=0.28.1",
]

[project.scripts]
reminder-app = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ty.environment]
python-version = "3.13"

[[tool.ty.overrides]]
include = ["app/bot/handlers.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
